# similar-screens-solution

./: .env.dev  .env.example  .gitignore  README.md  __agents.md  docker-compose.yml  pyproject.toml  req_embed.json
backend-service/: Dockerfile  ingest_screenoteka.sh  pyproject.toml
backend-service/backend_service/: app.py  config.py  database.py  embed_client.py  image_processing.py  pipeline.py  qdrant.py  storage.py
contracts/: pyproject.toml
contracts/contracts/: dto.py
contracts/tests/: test_dto.py
embedding-service/: Dockerfile  curl_embed.sh  pyproject.toml
embedding-service/embedding_service/: app.py  config.py  model.py  storage.py
openspec/: project.md
openspec/changes/add-backend-and-bot-logging/: tasks.md
openspec/changes/add-embedding-service/: proposal.md  tasks.md
openspec/changes/add-ingest-endpoint/: proposal.md  tasks.md
openspec/changes/add-postgresql-service/: design.md  proposal.md  tasks.md
openspec/changes/add-postgresql-service/specs/backend/: spec.md
openspec/changes/add-telegram-similar-gallery/: tasks.md
openspec/changes/add-telegram-similar-gallery/specs/backend/: spec.md
openspec/changes/add-telegram-similar-gallery/specs/telegram-bot/: spec.md
openspec/changes/archive/2025-11-16-add-telegram-similar-gallery/: proposal.md  tasks.md
openspec/changes/archive/2025-11-30-add-backend-and-bot-logging/: proposal.md  tasks.md
openspec/changes/archive/2025-11-30-add-backend-and-bot-logging/specs/backend/: spec.md
openspec/changes/archive/2025-11-30-add-backend-and-bot-logging/specs/telegram-bot/: spec.md
openspec/changes/archive/2025-11-30-add-postgresql-service/: proposal.md  tasks.md
openspec/changes/archive/2025-11-30-add-qdrant-wrapper/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-30-add-qdrant-wrapper/specs/backend/: spec.md
openspec/changes/archive/2025-12-01-add-embedding-service/: design.md  tasks.md
openspec/changes/archive/2025-12-01-add-embedding-service/specs/embedding-service/: spec.md
openspec/changes/archive/2025-12-01-add-ingest-endpoint/: design.md
openspec/changes/archive/2025-12-01-add-ingest-endpoint/specs/backend/: spec.md
openspec/changes/update-similar-prefetch/specs/backend/: spec.md
openspec/specs/backend/: spec.md
openspec/specs/embedding-service/: spec.md
openspec/specs/telegram-bot/: spec.md
scripts/: backfill_custom.py  backfill_qdrant_payload.py  bulk_ingest.py
telegram-bot/: Dockerfile  pyproject.toml
telegram-bot/telegram_bot/: config.py  main.py
