[project]
name = "similar-screens-solution"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "contracts",
    "backend-service",
    "telegram-bot",
    "embedding-service",
]

[tool.uv.workspace]
members = [
    "contracts",
    "backend-service",
    "telegram-bot",
    "embedding-service",
]

[tool.uv.sources]
contracts     = { workspace = true }
backend-service = { workspace = true }
telegram-bot  = { workspace = true }
embedding-service = { workspace = true }
