[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contracts"
version = "0.1.0"
description = "Shared contracts for bot and backend"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3.0",
]

[tool.setuptools]
packages = ["contracts"]
