[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-service"
version = "0.1.0"
description = "GPU embedding service for screenshots"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "contracts",
    "minio",
    "pillow",
    "torch",
    "timm",
]

[tool.setuptools]
packages = ["embedding_service"]
